--- a/idustask/src/main/resources/application.properties
+++ b/idustask/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # 실행되는 쿼리 formatting
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 # 실행되는 쿼리를 출력
 logging.level.org.hibernate.SQL=DEBUG
