--- a/idustask/src/main/resources/application.properties
+++ b/idustask/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Á¦ÀÌ½¼ ¹®ÀÚ¿­À» Object·Î º¯È¯ÇÏ´Â °úÁ¤  : deserialization
-# unknown properties°¡ ÀÖÀ¸¸é ½ÇÆĞÇÏ¶ó
+# ì œì´ìŠ¨ ë¬¸ìì—´ì„ Objectë¡œ ë³€í™˜í•˜ëŠ” ê³¼ì •  : deserialization
+# unknown propertiesê°€ ìˆìœ¼ë©´ ì‹¤íŒ¨í•˜ë¼
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.datasource.url=jdbc:h2:mem:idus
@@ -8,14 +8,14 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
-# hibernate¸¦ ÅëÇÏ¿© Å×ÀÌºíÀ» ÀÚµ¿ »ı¼º ¹× sql logging °ü·Ã ¼³Á¤
+# hibernateë¥¼ í†µí•˜ì—¬ í…Œì´ë¸”ì„ ìë™ ìƒì„± ë° sql logging ê´€ë ¨ ì„¤ì •
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# ½ÇÇàµÇ´Â Äõ¸® formatting
+# ì‹¤í–‰ë˜ëŠ” ì¿¼ë¦¬ formatting
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-# ½ÇÇàµÇ´Â Äõ¸®¸¦ Ãâ·Â
+# ì‹¤í–‰ë˜ëŠ” ì¿¼ë¦¬ë¥¼ ì¶œë ¥
 logging.level.org.hibernate.SQL=DEBUG
 
 jwt.secret=jwtpassword
