--- a/idustask/src/main/resources/application.yaml
+++ b/idustask/src/main/resources/application.yaml
@@ -4,14 +4,16 @@ spring:
   jackson:
   deserialization:
   fail-on-unknown-properties: true
+
   datasource:
     url: jdbc:h2:mem:idus
     driverClassName: org.h2.Driver
     username: sa
     password:
-    h2:
-      console:
-        enabled: true
+
+  h2:
+    console:
+      enabled: true
 # hibernate를 통하여 테이블을 자동 생성 및 sql logging 관련 설정
   jpa:
     hibernate:
@@ -35,3 +37,9 @@ logging:
 jwt:
   secret: jwtpassword
   jwt_token_validity: 36000
+
+urlfilter:
+  permitALL_url_list: [/api/signin, /api/member/signup, /h2-console/**,/v2/api-docs, /swagger-resources/**, /swagger-ui/**, /swagger-ui/index.html**, /webjars/**, /actuator/health]
+  exclude_filter_url_list: [/api/signin, /api/member/signup, /h2-console/**,/v2/api-docs, /swagger-resources/**, /swagger-ui/**, /swagger-ui/index.html**, /webjars/**, /actuator/health]
+
+adminemail: admin@email.com
