refactor : schema.sql로 테이블 기본 스키마 생성
application.yaml > jpa.hibernate.ddl-auto: validate로 설정하여 엔티티와 테이블이 정상 매핑되어 있는지만 검증하고
테이블 생성은 sql 스크립트에 위임

--- a/idustask/src/main/resources/application.yaml
+++ b/idustask/src/main/resources/application.yaml
@@ -11,13 +11,15 @@ spring:
     username: sa
     password:
 
+
   h2:
     console:
       enabled: true
 # hibernate를 통하여 테이블을 자동 생성 및 sql logging 관련 설정
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
+    generate-ddl: true
     properties:
       hibernate:
         jdbc:
